Bug 49605 - [PATCH] Writer confused by overlapping grammar errors
Summary: [PATCH] Writer confused by overlapping grammar errors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.6.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-07 14:03 UTC by Daniel Naber
Modified: 2012-06-28 08:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
fix (817 bytes, patch)
2012-05-07 14:03 UTC, Daniel Naber
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Naber 2012-05-07 14:03:45 UTC
Created attachment 61191 [details]
fix

Having two errors that partly overlap confuses writer, it will show the same error message for both. That's because only the first error is considered, the end position is ignored. The attached patch seems to fix this.

If you want to reproduce: download and install http://www.languagetool.org/download/test/LanguageTool-20120507-snapshot-overlapping-bug-demo.oxt, create a German document with this text: "Die falle schnappte zu." You will see two underlines (looks like one because of the overlap): right click on "falle", then one "schnappte" -> you will get the same error texts and suggestions, although there are two errors. With the patch, the error does not occur anymore.
Comment 1 Korrawit Pruegsanusak 2012-05-08 04:41:43 UTC
Could you please send it to libreoffice@lists.freedesktop.org and mention this bug? We love discussing the patch there. Thanks! :-)
Comment 2 Michael Meeks 2012-05-08 13:26:22 UTC
Yep - as Korrawit says the ML is the place; with [PATCH] in the subject :-)
Comment 3 Not Assigned 2012-05-09 11:48:58 UTC
Daniel Naber committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1616759f49b2c2065a6404d16bee31dab9afa7f0

fdo#49605: SwEditShell: fix handling of overlapping grammar errors
Comment 4 Korrawit Pruegsanusak 2012-05-12 04:43:46 UTC
Shall we mark this bug as fixed then?