fdo#49605: SwEditShell: fix handling of overlapping grammar errors