sw/source/core/edit/edlingu.cxx
@@ -1160,7 +1160,7 @@ bool SwEditShell::GetGrammarCorrection(
                     // return suggestions for first error that includes the given error position
                     const linguistic2::SingleProofreadingError &rError = rResult.aErrors[i];
                     if (rError.nErrorStart <= rErrorPosInText &&
-                        rErrorPosInText < rError.nErrorStart + rError.nErrorLength)
+                        rErrorPosInText + nLen <= rError.nErrorStart + rError.nErrorLength)
                     {
                         rSuggestions = rError.aSuggestions;
                         rErrorIndexInResult = i;
